[package]
name = "gdcmjpeg-sys"
version = "0.1.0"
authors = ["Victor Saase <vsaase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.80"

[dev-dependencies]
image = "0.23.11"

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1.44"